# Equilibrium-Vault

./: .gitignore  DOCKER_README.md  MSI.md  PROJECT_CONTEXT.md  README.md  docker-compose.prod.yml  docker-compose.yml  download_stitch.py  fix_storage_rls.sql  list_buckets.py  main.py  pyproject.toml  setup_bucket.py  test_db.py  test_integration.py  test_rls.py  test_rls2.py
app/api/dependencies/: auth.py
app/api/routers/: auth.py  cards.py  categories.py  couples.py  personal.py  profile.py  recurring.py  savings.py
app/core/: config.py
app/db/: supabase.py
app/schemas/: auth.py  cards.py  categories.py  couples.py  enums.py  personal.py  recurring.py  savings.py
app/services/: personal_service.py
docker/: Dockerfile.backend  Dockerfile.frontend
docker/nginx/: frontend.conf  nginx.conf
frontend/: .gitignore  angular.json  ngsw-config.json  package-lock.json  package.json
frontend/public/: manifest.webmanifest
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.routes.ts  app.ts
frontend/src/app/core/guards/: auth.guard.ts
frontend/src/app/core/interceptors/: auth.interceptor.ts
frontend/src/app/core/models/: finance.model.ts
frontend/src/app/core/services/: alert.service.ts  auth.service.ts  finance.service.ts  modal.service.ts  recurring.service.ts  refresh.service.ts
frontend/src/app/features/calendar/: calendar.component.html  calendar.component.ts
frontend/src/app/features/couples/: couples.component.html  couples.component.ts
frontend/src/app/features/credit-cards/: credit-cards.component.html  (+1 more)
(+30 files in other folders)
