[project]
name = "finanzas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.135.3",
    "pydantic-settings>=2.13.1",
    "supabase>=2.28.3",
    "uvicorn>=0.44.0",
    "python-dateutil>=2.9.0",
    "python-multipart>=0.0.27",
]
